--- a/EF_network_analysis.tex
+++ b/EF_network_analysis.tex
@@ -282,40 +282,191 @@ O'Reilly, Email: \href{mailto:foreilly@stanford.edu}{foreilly@stanford.edu}}
 
 
 \begin{verbatim}
- [1] "ServiceID"          "CID"                "Age"               
- [4] "Sex"                "Group"              "A2_MatEdu"         
- [7] "A3_FamIncome"       "A5_HomeLang"        "HLE_Index"         
-[10] "C4_ATSI"            "C5_SleepTime"       "C5_1_SleepStart"   
-[13] "C5_2_SleepEnd"      "C6_Nap"             "C6_a_NapDur"       
-[16] "C7_PA_Mins"         "C8_Screen_Mins"     "C9_SportsPartic"   
-[19] "C9_b_Sports_FreqWk" "C9_c_Sports_MinsWk" "HTKS_T1"           
-[22] "HTKS_T2"            "HTKS_T3"            "MrAnt_Pt_T1"       
-[25] "MrAnt_Pt_T2"        "MrAnt_Pt_T3"        "GNG_IC_T1"         
-[28] "GNG_IC_T2"          "GNG_IC_T3"          "CS_SwAcc_T1"       
-[31] "CS_SwAcc_T2"        "CS_SwAcc_T3"        "Bracken_Raw_T1"    
-[34] "Bracken_Raw_T2"     "Num_T3"             "Vocab_Acc_T3"      
+[1] 344
 \end{verbatim}
 
 \begin{verbatim}
-Error in check_for_XQuartz(file.path(R.home("modules"), "R_de.so")): X11 library is missing: install XQuartz from www.xquartz.org
+[1] 344
 \end{verbatim}
 
 \begin{verbatim}
-
-  1 
-232 
+  [1] "caregiver_child_studyid"      "redcap_event_name"           
+  [3] "interview_date"               "ra"                          
+  [5] "child_id"                     "caregiver_id"                
+  [7] "child_sex"                    "child_dob"                   
+  [9] "child_age"                    "child_birthweight"           
+ [11] "caregiver_dob"                "caregiver_age"               
+ [13] "relationship_child"           "marital_status"              
+ [15] "education_school"             "education_post_school"       
+ [17] "education_post_school_b"      "child_education"             
+ [19] "child_education_specific"     "child_education_frequency"   
+ [21] "children_in_house"            "adults_in_house"             
+ [23] "total_in_household"           "language_at_home___1"        
+ [25] "language_at_home___2"         "language_at_home___3"        
+ [27] "language_at_home___4"         "language_at_home___unk"      
+ [29] "language_at_home___na"        "language_at_home___999"      
+ [31] "language_at_home___9999"      "stress_gunshots"             
+ [33] "stress_arrested"              "stress_unsafeathome"         
+ [35] "stress_drugdeal"              "stress_see_beaten"           
+ [37] "stress_yelling"               "stress_stabbing"             
+ [39] "stress_shot"                  "stress_unsafe_school"        
+ [41] "stress_adults_hit"            "stress_unsafe_outside"       
+ [43] "stress_deadbody"              "stress_see_gangs"            
+ [45] "stress_see_gun"               "stress_see_knife"            
+ [47] "stress_see_stealing"          "stress_threat_beaten_fam"    
+ [49] "stress_threat_beat_non"       "stress_get_beaten_fam"       
+ [51] "stress_get_beaten_non"        "stress_threat_killed"        
+ [53] "stress_threat_stabbed"        "stress_sexual_touch_non"     
+ [55] "stress_genitals_non"          "stress_use_weapons"          
+ [57] "stress_know_killed"           "stress_see_murder"           
+ [59] "stress_fam_pinch"             "stress_non_pinched"          
+ [61] "cecv_factor_1"                "cecv_factor_2"               
+ [63] "cecv_factor_3"                "stress_total_score"          
+ [65] "parental_consistant_1"        "positive_encourage_1"        
+ [67] "parental_consistant_2"        "parental_consistant_3"       
+ [69] "coercive_parent_1"            "positive_encourage_2"        
+ [71] "coercive_parent_2"            "positive_encourage_3"        
+ [73] "coercive_parent_3"            "coercive_parent_4"           
+ [75] "parental_consistant_4"        "parental_consistant_5"       
+ [77] "coercive_parent_5"            "relationship_1"              
+ [79] "relationship_2"               "relationship_3"              
+ [81] "relationship_4"               "relationship_5"              
+ [83] "parental_adjust_1"            "parental_adjust_2"           
+ [85] "parental_adjust_3"            "parental_adjust_4"           
+ [87] "parental_adjust_5"            "family_relation_1"           
+ [89] "family_relation_2"            "family_relation_3"           
+ [91] "family_relation_4"            "parental_consistency_score"  
+ [93] "coercive_parent_score"        "positive_encourage_score"    
+ [95] "relationship_score"           "parental_adjust_score"       
+ [97] "family_relationship_score"    "parent_scales_total"         
+ [99] "hle_read_books"               "hle_read_who___1"            
+[101] "hle_read_who___2"             "hle_read_who___3"            
+[103] "hle_read_who___4"             "hle_read_who___5"            
+[105] "hle_read_who___6"             "hle_read_who___unk"          
+[107] "hle_read_who___na"            "hle_read_who___999"          
+[109] "hle_read_who___9999"          "hle_read_specify"            
+[111] "hle_stories"                  "hle_stories_who___1"         
+[113] "hle_stories_who___2"          "hle_stories_who___3"         
+[115] "hle_stories_who___4"          "hle_stories_who___5"         
+[117] "hle_stories_who___6"          "hle_stories_who___unk"       
+[119] "hle_stories_who___na"         "hle_stories_who___999"       
+[121] "hle_stories_who___9999"       "hle_stories_specify"         
+[123] "hle_songs"                    "hle_songs_who___1"           
+[125] "hle_songs_who___2"            "hle_songs_who___3"           
+[127] "hle_songs_who___4"            "hle_songs_who___5"           
+[129] "hle_songs_who___6"            "hle_songs_who___unk"         
+[131] "hle_songs_who___na"           "hle_songs_who___999"         
+[133] "hle_songs_who___9999"         "hle_songs_specify"           
+[135] "hle_outside"                  "hle_outside_who___1"         
+[137] "hle_outside_who___2"          "hle_outside_who___3"         
+[139] "hle_outside_who___4"          "hle_outside_who___5"         
+[141] "hle_outside_who___6"          "hle_outside_who___unk"       
+[143] "hle_outside_who___na"         "hle_outside_who___999"       
+[145] "hle_outside_who___9999"       "hle_outside_specify"         
+[147] "hle_play"                     "hle_play_who___1"            
+[149] "hle_play_who___2"             "hle_play_who___3"            
+[151] "hle_play_who___4"             "hle_play_who___5"            
+[153] "hle_play_who___6"             "hle_play_who___unk"          
+[155] "hle_play_who___na"            "hle_play_who___999"          
+[157] "hle_play_who___9999"          "hle_play_specify"            
+[159] "hle_names"                    "hle_names_who___1"           
+[161] "hle_names_who___2"            "hle_names_who___3"           
+[163] "hle_names_who___4"            "hle_names_who___5"           
+[165] "hle_names_who___6"            "hle_names_who___unk"         
+[167] "hle_names_who___na"           "hle_names_who___999"         
+[169] "hle_names_who___9999"         "hle_names_specify"           
+[171] "hle_count"                    "hle_count_who___1"           
+[173] "hle_count_who___2"            "hle_count_who___3"           
+[175] "hle_count_who___4"            "hle_count_who___5"           
+[177] "hle_count_who___6"            "hle_count_who___unk"         
+[179] "hle_count_who___na"           "hle_count_who___999"         
+[181] "hle_count_who___9999"         "hle_count_specify"           
+[183] "hle_draw"                     "hle_draw_who___1"            
+[185] "hle_draw_who___2"             "hle_draw_who___3"            
+[187] "hle_draw_who___4"             "hle_draw_who___5"            
+[189] "hle_draw_who___6"             "hle_draw_who___unk"          
+[191] "hle_draw_who___na"            "hle_draw_who___999"          
+[193] "hle_draw_who___9999"          "hle_draw_specify"            
+[195] "hle_freqency_score"           "hle_time_week"               
+[197] "hle_time_weekend"             "total_time_with_child"       
+[199] "hle_books_home"               "hle_books_number"            
+[201] "hle_homemade_toys"            "hle_homemade_toys_specify"   
+[203] "hle_toys_shop"                "hle_toys_shop_specify"       
+[205] "hle_household_objects"        "hle_objects_specify"         
+[207] "books_toys_house_total"       "nids_items_1"                
+[209] "nids_items_2"                 "nids_items_3"                
+[211] "nids_items_4"                 "nids_items_5"                
+[213] "nids_items_6"                 "nids_items_7"                
+[215] "nids_items_8"                 "nids_items_9"                
+[217] "nids_items_10"                "nids_items_11"               
+[219] "nids_items_12"                "nids_items_13"               
+[221] "nids_items_14"                "nids_items_15"               
+[223] "nids_items_16"                "nids_items_17"               
+[225] "nids_items_18"                "nids_items_19"               
+[227] "nids_items_20"                "nids_items_21"               
+[229] "nids_items_22"                "nids_items_23"               
+[231] "nids_items_24"                "nids_items_25"               
+[233] "nids_items_26"                "household_items_score"       
+[235] "nids_income_1"                "nids_income_2"               
+[237] "nids_income_3"                "nids_income_4"               
+[239] "nids_income_5"                "nids_income_6"               
+[241] "income_range"                 "monthly_income_given"        
+[243] "field_notes"                  "water_1"                     
+[245] "water_2"                      "water_2_other"               
+[247] "water_3"                      "water_3_a"                   
+[249] "water_3_other"                "water_3_b"                   
+[251] "water_4___0"                  "water_4___1"                 
+[253] "water_4___2"                  "water_4___3"                 
+[255] "water_4___4"                  "water_4___5"                 
+[257] "water_4___unk"                "water_4___na"                
+[259] "water_4___999"                "water_4___9999"              
+[261] "water_4_other"                "water_5"                     
+[263] "water_5_other"                "water_6___1"                 
+[265] "water_6___2"                  "water_6___3"                 
+[267] "water_6___unk"                "water_6___na"                
+[269] "water_6___999"                "water_6___9999"              
+[271] "water_6_a"                    "water_6_other"               
+[273] "covid_711___1"                "covid_711___2"               
+[275] "covid_711___3"                "covid_711___4"               
+[277] "covid_711___5"                "covid_711___6"               
+[279] "covid_711___7"                "covid_711___unk"             
+[281] "covid_711___na"               "covid_711___999"             
+[283] "covid_711___9999"             "covid_712"                   
+[285] "covid_721"                    "covid_722"                   
+[287] "covid_731___1"                "covid_731___2"               
+[289] "covid_731___3"                "covid_731___unk"             
+[291] "covid_731___na"               "covid_731___999"             
+[293] "covid_731___9999"             "covid_732"                   
+[295] "covid_741___1"                "covid_741___2"               
+[297] "covid_741___3"                "covid_741___4"               
+[299] "covid_741___5"                "covid_741___6"               
+[301] "covid_741___unk"              "covid_741___na"              
+[303] "covid_741___999"              "covid_741___9999"            
+[305] "covid_742"                    "covid_751"                   
+[307] "covid_752"                    "covid_761"                   
+[309] "covid_762"                    "covid_771"                   
+[311] "covid_772"                    "covid_78"                    
+[313] "covid_79___1"                 "covid_79___2"                
+[315] "covid_79___3"                 "covid_79___unk"              
+[317] "covid_79___na"                "covid_79___999"              
+[319] "covid_79___9999"              "covid_710"                   
+[321] "v2_covid_1"                   "v2_covid_1a"                 
+[323] "v2_covid_1a_other"            "v2_covid_1b"                 
+[325] "v2_covid_1b_other"            "v2_covid_2"                  
+[327] "v2_covid_3"                   "v2_covid_4"                  
+[329] "v2_covid_5"                   "v2_covid_6"                  
+[331] "v2_covid_7"                   "v2_covid_8_details"          
+[333] "additional_details"           "caregiver_interview_complete"
+[335] "date_of_eyt"                  "eyt_child_age_at_testing"    
+[337] "eyt2_ageinmonths"             "time_btwn_testing"           
+[339] "ef_inhibition"                "ef_cogflex"                  
+[341] "ef_workingmem"                "refuse_missing_eyt"          
+[343] "notes_eyt"                    "early_years_toolbox_complete"
 \end{verbatim}
 
-\begin{verbatim}
-   Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
-  3.200   4.190   4.437   4.426   4.658   5.244 
-\end{verbatim}
+\section{South African data}\label{south-african-data}
 
-\begin{verbatim}
-Error in `group_by()`:
-! Must group by variables found in `.data`.
-x Column `Timepoint` is not found.
-\end{verbatim}
+\section{Australian data}\label{australian-data}
 
 \subsection{Explore data}\label{explore-data}
 
@@ -357,89 +508,202 @@ x Column `Timepoint` is not found.
 9  0.03511300 -0.3474178 0.07664446
 \end{verbatim}
 
-\pandocbounded{\includegraphics[keepaspectratio]{EF_network_analysis_files/figure-pdf/explore data-1.png}}
-
 \begin{verbatim}
-# A tibble: 9 x 3
-  flag              n_outliers variable   
-  <chr>                  <int> <chr>      
-1 z_GNG_IC_T2_out            1 GNG_IC_T2  
-2 z_CS_SwAcc_T3_out          1 CS_SwAcc_T3
-3 z_MrAnt_Pt_T1_out          0 MrAnt_Pt_T1
-4 z_GNG_IC_T1_out            0 GNG_IC_T1  
-5 z_CS_SwAcc_T1_out          0 CS_SwAcc_T1
-6 z_MrAnt_Pt_T2_out          0 MrAnt_Pt_T2
-7 z_CS_SwAcc_T2_out          0 CS_SwAcc_T2
-8 z_MrAnt_Pt_T3_out          0 MrAnt_Pt_T3
-9 z_GNG_IC_T3_out            0 GNG_IC_T3  
+# A tibble: 4 x 13
+  Measure         `N (T1)` `Missing % (T1)` `Mean (SD) (T1)` `Median [IQR] (T1)`
+  <chr>              <int>            <dbl> <chr>            <chr>              
+1 Age                  224              0   4.42 (0.38)      4.43 [4.19, 4.66]  
+2 Card Sort (swi~      231              0.4 4.69 (4.12)      4.00 [0.00, 9.00]  
+3 Go/No-Go (IC)        232              0   0.56 (0.19)      0.56 [0.43, 0.71]  
+4 Mr Ant (points)      232              0   1.50 (0.95)      1.67 [1.00, 2.00]  
+# i 8 more variables: `N (T2)` <int>, `Missing % (T2)` <dbl>,
+#   `Mean (SD) (T2)` <chr>, `Median [IQR] (T2)` <chr>, `N (T3)` <int>,
+#   `Missing % (T3)` <dbl>, `Mean (SD) (T3)` <chr>, `Median [IQR] (T3)` <chr>
 \end{verbatim}
 
 \subsubsection{Developmental change in tasks across
 age}\label{developmental-change-in-tasks-across-age}
 
-\pandocbounded{\includegraphics[keepaspectratio]{EF_network_analysis_files/figure-pdf/age trends-1.png}}
-
-\pandocbounded{\includegraphics[keepaspectratio]{EF_network_analysis_files/figure-pdf/age trends-2.png}}
-
 \begin{verbatim}
- [1] "ServiceID"          "CID"                "Age"               
- [4] "Sex"                "Group"              "A2_MatEdu"         
- [7] "A3_FamIncome"       "A5_HomeLang"        "HLE_Index"         
-[10] "C4_ATSI"            "C5_SleepTime"       "C5_1_SleepStart"   
-[13] "C5_2_SleepEnd"      "C6_Nap"             "C6_a_NapDur"       
-[16] "C7_PA_Mins"         "C8_Screen_Mins"     "C9_SportsPartic"   
-[19] "C9_b_Sports_FreqWk" "C9_c_Sports_MinsWk" "HTKS_T1"           
-[22] "HTKS_T2"            "HTKS_T3"            "MrAnt_Pt_T1"       
-[25] "MrAnt_Pt_T2"        "MrAnt_Pt_T3"        "GNG_IC_T1"         
-[28] "GNG_IC_T2"          "GNG_IC_T3"          "CS_SwAcc_T1"       
-[31] "CS_SwAcc_T2"        "CS_SwAcc_T3"        "Bracken_Raw_T1"    
-[34] "Bracken_Raw_T2"     "Num_T3"             "Vocab_Acc_T3"      
+Error in `select()`:
+! Can't select columns that don't exist.
+x Column `Age` doesn't exist.
 \end{verbatim}
 
-\pandocbounded{\includegraphics[keepaspectratio]{EF_network_analysis_files/figure-pdf/age trends-3.png}}
+\begin{verbatim}
+Error in `combine_vars()`:
+! At least one layer must contain all faceting variables: `task`
+x Plot is missing `task`
+x Layer 1 is missing `task`
+x Layer 2 is missing `task`
+\end{verbatim}
 
-\pandocbounded{\includegraphics[keepaspectratio]{EF_network_analysis_files/figure-pdf/age trends-4.png}}
+\begin{verbatim}
+Error in `mutate()`:
+i In argument: `score_z = as.numeric(scale(score))`.
+i In group 1: `measure = "Card Sort (switch acc)"`.
+Caused by error:
+! object 'score' not found
+\end{verbatim}
 
-\pandocbounded{\includegraphics[keepaspectratio]{EF_network_analysis_files/figure-pdf/age trends-5.png}}
+\begin{verbatim}
+Error: object 'ef_long_z' not found
+\end{verbatim}
 
-\pandocbounded{\includegraphics[keepaspectratio]{EF_network_analysis_files/figure-pdf/age trends-6.png}}
+\begin{verbatim}
+Error: object 'p2' not found
+\end{verbatim}
 
-\pandocbounded{\includegraphics[keepaspectratio]{EF_network_analysis_files/figure-pdf/age trends-7.png}}
+\begin{verbatim}
+ [1] "CID"                "ServiceID"          "Age_T1"            
+ [4] "Age_T2"             "Age_T3"             "Sex"               
+ [7] "Group"              "A2_MatEdu"          "A3_FamIncome"      
+[10] "A5_HomeLang"        "HLE_Index"          "C4_ATSI"           
+[13] "C5_SleepTime"       "C5_1_SleepStart"    "C5_2_SleepEnd"     
+[16] "C6_Nap"             "C6_a_NapDur"        "C7_PA_Mins"        
+[19] "C8_Screen_Mins"     "C9_SportsPartic"    "C9_b_Sports_FreqWk"
+[22] "C9_c_Sports_MinsWk" "HTKS_T1"            "HTKS_T2"           
+[25] "HTKS_T3"            "MrAnt_Pt_T1"        "MrAnt_Pt_T2"       
+[28] "MrAnt_Pt_T3"        "GNG_IC_T1"          "GNG_IC_T2"         
+[31] "GNG_IC_T3"          "CS_SwAcc_T1"        "CS_SwAcc_T2"       
+[34] "CS_SwAcc_T3"        "Bracken_Raw_T1"     "Bracken_Raw_T2"    
+[37] "Num_T3"             "Vocab_Acc_T3"      
+\end{verbatim}
 
-\pandocbounded{\includegraphics[keepaspectratio]{EF_network_analysis_files/figure-pdf/age trends-8.png}}
+\begin{verbatim}
+Error in `select()`:
+i In argument: `all_of(age_col)`.
+Caused by error in `all_of()`:
+! Can't subset elements that don't exist.
+x Element `Age` doesn't exist.
+\end{verbatim}
 
-\pandocbounded{\includegraphics[keepaspectratio]{EF_network_analysis_files/figure-pdf/age trends-9.png}}
+\begin{verbatim}
+Error in `select()`:
+i In argument: `all_of(age_col)`.
+Caused by error in `all_of()`:
+! Can't subset elements that don't exist.
+x Element `Age` doesn't exist.
+\end{verbatim}
 
-\pandocbounded{\includegraphics[keepaspectratio]{EF_network_analysis_files/figure-pdf/age trends-10.png}}
+\begin{verbatim}
+Error in `select()`:
+i In argument: `all_of(age_col)`.
+Caused by error in `all_of()`:
+! Can't subset elements that don't exist.
+x Element `Age` doesn't exist.
+\end{verbatim}
 
-\pandocbounded{\includegraphics[keepaspectratio]{EF_network_analysis_files/figure-pdf/age trends-11.png}}
+\begin{verbatim}
+Error in `select()`:
+i In argument: `all_of(age_col)`.
+Caused by error in `all_of()`:
+! Can't subset elements that don't exist.
+x Element `Age` doesn't exist.
+\end{verbatim}
+
+\begin{verbatim}
+Error in `select()`:
+i In argument: `all_of(age_col)`.
+Caused by error in `all_of()`:
+! Can't subset elements that don't exist.
+x Element `Age` doesn't exist.
+\end{verbatim}
+
+\begin{verbatim}
+Error in `select()`:
+i In argument: `all_of(age_col)`.
+Caused by error in `all_of()`:
+! Can't subset elements that don't exist.
+x Element `Age` doesn't exist.
+\end{verbatim}
+
+\begin{verbatim}
+Error in `select()`:
+i In argument: `all_of(age_col)`.
+Caused by error in `all_of()`:
+! Can't subset elements that don't exist.
+x Element `Age` doesn't exist.
+\end{verbatim}
+
+\begin{verbatim}
+Error in `select()`:
+i In argument: `all_of(age_col)`.
+Caused by error in `all_of()`:
+! Can't subset elements that don't exist.
+x Element `Age` doesn't exist.
+\end{verbatim}
+
+\begin{verbatim}
+Error in `select()`:
+i In argument: `all_of(age_col)`.
+Caused by error in `all_of()`:
+! Can't subset elements that don't exist.
+x Element `Age` doesn't exist.
+\end{verbatim}
 
 \subsubsection{Within child trajectories (raw
 scores)}\label{within-child-trajectories-raw-scores}
 
 \begin{verbatim}
-# A tibble: 27 x 8
-   measure     contrast n_pairs  mean    sd    se ci95_l ci95_u
-   <chr>       <chr>      <int> <dbl> <dbl> <dbl>  <dbl>  <dbl>
- 1 CS_SwAcc_T1 d12            0   NaN    NA    NA    NaN    NaN
- 2 CS_SwAcc_T1 d23            0   NaN    NA    NA    NaN    NaN
- 3 CS_SwAcc_T1 d13            0   NaN    NA    NA    NaN    NaN
- 4 CS_SwAcc_T2 d12            0   NaN    NA    NA    NaN    NaN
- 5 CS_SwAcc_T2 d23            0   NaN    NA    NA    NaN    NaN
- 6 CS_SwAcc_T2 d13            0   NaN    NA    NA    NaN    NaN
- 7 CS_SwAcc_T3 d12            0   NaN    NA    NA    NaN    NaN
- 8 CS_SwAcc_T3 d23            0   NaN    NA    NA    NaN    NaN
- 9 CS_SwAcc_T3 d13            0   NaN    NA    NA    NaN    NaN
-10 GNG_IC_T1   d12            0   NaN    NA    NA    NaN    NaN
-# i 17 more rows
+Error in `select()`:
+! Can't select columns that don't exist.
+x Column `Age` doesn't exist.
 \end{verbatim}
 
-\pandocbounded{\includegraphics[keepaspectratio]{EF_network_analysis_files/figure-pdf/within child trajectories-1.png}}
+\begin{verbatim}
+Error in `select()`:
+i In argument: `all_of(id_col)`.
+Caused by error in `all_of()`:
+! Can't subset elements that don't exist.
+x Element `CID` doesn't exist.
+\end{verbatim}
+
+\begin{verbatim}
+Error: object 'change_wide' not found
+\end{verbatim}
+
+\begin{verbatim}
+Error: object 'paired_change_summary' not found
+\end{verbatim}
+
+\begin{verbatim}
+Error in `combine_vars()`:
+! At least one layer must contain all faceting variables: `task_l`
+x Plot is missing `task_l`
+x Layer 1 is missing `task_l`
+x Layer 2 is missing `task_l`
+\end{verbatim}
 
 \subsubsection{EF change over time (raw
 scores)}\label{ef-change-over-time-raw-scores}
 
-\pandocbounded{\includegraphics[keepaspectratio]{EF_network_analysis_files/figure-pdf/mean change over time within task, raw scores-1.png}}
+\begin{verbatim}
+Error in `group_by()`:
+! Must group by variables found in `.data`.
+Column `task_l` is not found.
+Column `tp` is not found.
+\end{verbatim}
+
+\begin{verbatim}
+Error: object 'summary_ci' not found
+\end{verbatim}
+
+\begin{verbatim}
+Error in h(simpleError(msg, call)): error in evaluating the argument 'x' in selecting a method for function 'diff': object 'y_lims' not found
+\end{verbatim}
+
+\begin{verbatim}
+Error: object 'y_lims' not found
+\end{verbatim}
+
+\begin{verbatim}
+Error: object 'summary_ci' not found
+\end{verbatim}
+
+\begin{verbatim}
+Error in h(simpleError(msg, call)): error in evaluating the argument 'x' in selecting a method for function 'print': object 'p' not found
+\end{verbatim}
 
 \subsubsection{Box plots (raw scores)}\label{box-plots-raw-scores}
 
@@ -449,34 +713,46 @@ scores)}\label{ef-change-over-time-raw-scores}
 standard
 deviation}\label{ef-change-over-time-standardised-to-each-tasks-t1-standard-deviation}
 
-\pandocbounded{\includegraphics[keepaspectratio]{EF_network_analysis_files/figure-pdf/mean change over time within task, standardised scores-1.png}}
+\begin{verbatim}
+Error in `filter()`:
+i In argument: `tp == "T1"`.
+Caused by error:
+! object 'tp' not found
+\end{verbatim}
+
+\begin{verbatim}
+Error: object 't1_stats' not found
+\end{verbatim}
+
+\begin{verbatim}
+Error: object 'ef_long_zT1' not found
+\end{verbatim}
+
+\begin{verbatim}
+Error: object 'summary_ci_z' not found
+\end{verbatim}
 
 \subsubsection{Mixed effects model to test if change from T1 to T2 is
 statistically
 significant}\label{mixed-effects-model-to-test-if-change-from-t1-to-t2-is-statistically-significant}
 
 \begin{verbatim}
-# A tibble: 9 x 14
-  meas_root contrast estimate     SE    df     t        p lower.CL upper.CL
-  <chr>     <chr>       <dbl>  <dbl> <dbl> <dbl>    <dbl>    <dbl>    <dbl>
-1 CS_SwAcc  T2 - T1    1.31   0.293   336.  4.47 1.07e- 5   0.734     1.89 
-2 CS_SwAcc  T3 - T1    4.13   0.378   382. 10.9  2.41e-24   3.39      4.88 
-3 CS_SwAcc  T3 - T2    2.82   0.382   380.  7.38 9.85e-13   2.07      3.57 
-4 GNG_IC    T2 - T1    0.126  0.0130  332.  9.71 8.61e-20   0.101     0.152
-5 GNG_IC    T3 - T1    0.197  0.0170  365. 11.6  1.08e-26   0.164     0.231
-6 GNG_IC    T3 - T2    0.0710 0.0172  363.  4.13 4.51e- 5   0.0372    0.105
-7 MrAnt_Pt  T2 - T1    0.296  0.0639  332.  4.63 5.20e- 6   0.170     0.422
-8 MrAnt_Pt  T3 - T1    1.01   0.0834  369. 12.1  1.11e-28   0.847     1.17 
-9 MrAnt_Pt  T3 - T2    0.715  0.0843  367.  8.48 5.58e-16   0.549     0.881
-# i 5 more variables: anova_F <dbl>, anova_df1 <int>, anova_df2 <dbl>,
-#   anova_p <dbl>, p_adj <dbl>
+Error in `mutate()`:
+i In argument: `tp = factor(tp, levels = c("T1", "T2", "T3"))`.
+Caused by error:
+! object 'tp' not found
 \end{verbatim}
 
 \begin{verbatim}
-Error in `transmute()`:
-i In argument: `p = pvalue(p)`.
-Caused by error in `pvalue()`:
-! could not find function "pvalue"
+Error: object 'ef_long2' not found
+\end{verbatim}
+
+\begin{verbatim}
+Error: object 'results' not found
+\end{verbatim}
+
+\begin{verbatim}
+Error: object 'results' not found
 \end{verbatim}
 
 \begin{verbatim}
